<resources>
    <string name="app_name">Quotes</string>
    <string name="author_item_button_text">View Quote</string>
    <string name="Quote">Quote:</string>
    <string name="places_button_text">Places</string>
    <string name="quote_place">Quote Place</string>
    <string name="first_name_hint">First Name</string>
    <string name="make_quote_instruction">Say Something please!</string>
    <string name="share_quote_text">Share</string>
    <string name="save_quote_text">Save</string>
    <string name="location_label">Location</string>
    <string name="last_name_hint">Last Name</string>
    <string name="menu_make_quote">Make Quote</string>
    <string name="local_quotes">Local Quotes</string>
    <string name="menu_logoutt">Log out</string>
    <string name="sample_profile_text">Sample Name</string>
    <string name="online_quotes">Online Quotes</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="authority">com.richydave.quotes.fileprovider</string>
    <string name="camera_cancel">Do you wish to cancel image capture process?</string>
    <string name="enable_provider_dialog_title">Provider Disabled</string>
    <string name="enable_provider_message">Please turn on your network to record quote location</string>
    <string name="ok">ok</string>
    <string name="birth_place_name_hint">Birth place</string>
    <string name="fine_location">Fine location not enabled</string>
    <string name="coarse_location">Coarse location not enabled</string>
    <string name="location_permission_title">Location permission</string>
    <string name="author_name_format">%s %s</string>
    <string name="saved">Saved!</string>
    <string name="not_saved">Not saved!</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_error_message">Ensure your username is more than 1 character  and password length is more than 6 character.</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="weak_password_message">Password must contain digit(s)</string>
    <string name="password_error">Password Error</string>
    <string name="number_pattern">\\d+</string>
    <string name="weak_username_password">User name and password length must be more than 6 characters</string>
    <string name="error">Error</string>
    <string name="login_error_message">Username or Password does not exist</string>
    <string name="login_error">Login Error</string>
    <string name="signup_success_message">Account created</string>
    <string name="signup_success">SignUp  Message</string>
    <string name="signup_error">Invalid Credentials</string>
    <string name="signup_conflict_error_message">User already exists</string>
    <string name="signup_conflict_error">User Credential Conflict</string>
    <string name="empty_user_credential">Provide username and password</string>
    <string name="wrong_user">Wrong user credentials</string>
    <string name="quote_creation_title">Quote Creation</string>
    <string name="quote_success_message">Quote saved successfully!</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_message">Unable to resolve host address.Establish internet connectivity,  but contact your network administrator if the problem persists</string>
    <string name="confirmation_tittle">Confirmation Message</string>
    <string name="space_pattern">\\s</string>
    <string name="sign_up_conflict_warning">User Credential Conflict</string>
    <string name="birth_place">Birth Place</string>
    <string name="Location_error_message">Quote Coordinate is unavailable</string>
    <string name="location_error_title">Location Error</string>
    <string name="place">Places</string>
    <string name="update">Update Profile</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="provide_uname_password">You must provide password and username</string>
    <string name="update_title">Update Information</string>
    <string name="update_success_message">Changes saved successfully</string>
    <string name="update_failure_message">Changes were not saved</string>
    <string name="update_instruction_message">You must provide valid username and password</string>
    <string name="new_password">New Password</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="error_tittle">Error</string>
    <string name="no_record">Record not found</string>
    <string name="plain_text">text/plain</string>
    <string name="intent_picker_instruction">Select an application to proceed</string>
    <string name="quote_subject_format">Quote from %s %s</string>
</resources>