<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:src="@drawable/ic_launcher_background"/>

        <EditText
            android:id="@+id/first_name"
            style="@style/textInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/last_name"
                style="@style/textInputStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/location_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/switchToggleStyle"
                android:text="@string/location_label"
                android:checked="false"
                android:textColor="@color/teal_green"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:gravity="center"
            style="@style/textInputStyle"
            android:hint="@string/make_quote_instruction"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/post"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/post_quote_text"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/save"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_quote_text"/>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>